# GameProgrammingPatterns

./: README.md  pyproject.toml
gpp/: __init__.py
gpp/patterns/: __init__.py  bytecode.py  command.py  component.py  dirty_flag.py  hsm.py  service_locator.py  type_object.py
tests/: test_bytecode_pattern.py  test_command_pattern.py  test_component_pattern.py  test_csm_pattern.py  test_data_locality_pattern.py  test_dirty_flag_pattern.py  test_double_buffer_pattern.py  test_event_queue_pattern.py  test_flyweight_pattern.py  test_fsm_pattern.py  test_game_loop_pattern.py  test_hsm_pattern.py  test_interpreter_pattern.py  test_object_pool_pattern.py  test_observer_pattern.py  test_pda_pattern.py  test_prototype_pattern.py  test_service_locator_pattern.py  test_singleton_pattern.py  test_spatial_partition_pattern.py  test_type_object_pattern.py  test_update_method_pattern.py
